# TIMBER

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py  setup.sh  setup_alternative.sh
TIMBER/: Analyzer.py  CollectionOrganizer.py
TIMBER/Framework/AnomalousJet_modules/: JetMatchingToPDGID.cc
TIMBER/Framework/TopPhi_modules/: BranchCorrection.cc
TIMBER/Framework/Tprime1lep/: cleanjet.cc  corrlib_funcs.cc  lumiMask.cc  lumiMask.h  selfDerived_corrs.cc  utilities.cc
TIMBER/Framework/XHYanomalous_modules/: HF_tagging_SF.cc  HF_tagging_SF.h
TIMBER/Framework/include/: CleanJet.h  Corrlib_funcs.h  EffLoader_2Dfunc.h  JMR_weight.h  JMS_weight.h  Utilities.h
TIMBER/Framework/src/: BranchCorrection.cc  EffLoader_2Dfunc.cc  JERC_JetVeto.cc  JER_correctionlib_weight.cc  JES_correctionlib_weight.cc  TopPt_weight.cc
TIMBER/Tools/: AutoJME_correctionlib.py  Common.py  Plot.py  README.md  RestFramesHandler.py
TIMBER/data/: pdfsets.index
examples/: .Tprime1lep.py.swp  Tprime1lep.py  ex2.py  ex3.py  ex4.py  ex5.py  ex_lq_valval.py
examples/ex6/: ex6.py  trained_model.onnx  trained_model.root
examples/jsonpog-integration/: .gitlab-ci.yml  .sync-commit  README.md
examples/jsonpog-integration/POG/EGM/2018_UL/: electron.json
examples/jsonpog-integration/POG/JME/: README.md
examples/jsonpog-integration/POG/JME/2016postVFP_UL/: met.json
examples/jsonpog-integration/examples/: electronExample.py  jercExample.py  muonExample.py  photonExample.py
examples/jsonpog-integration/script/: testMR.sh
timber-env/: pyvenv.cfg
(+3 files in other folders)
